discussion/kv_engine/184583/184583_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

quick and dirty prototype for protostellar encoded wrappings

There is a number of problems with the current protocol:

1. It ships the sid and cid as text strings so the server
   would need to do a lookup and may cause problems in
   a create/delete/create of scope/collection and the client
   would "just jump into a new one"

2. Some of the "message" structs could just be the same struct
   (GetRequest, GetAndTouch and GetAndLock etc could just use
   the fact that the extra members aren't transmitted etc
   instead of having everyone having to create wrappers for
   the structs)

Change-Id: If522f57fcbc1df3bb0c834302ea2260786a7250b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2023-01-06 17:34:41.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-06 18:21:25.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22382/ : FAILURE

clang-tidy found the following problems:

<pre>
warning: dynamic exception specification "" is deprecated; consider using "noexcept" instead [modernize-use-noexcept]
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/protocol/stellar/payloads.cc:16:10: error: "kv.v1.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.pb.h"
         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22382/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/protocol/stellar/payloads.cc:16:10:
error: "kv.v1.pb.h" file not found [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22382/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51717/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51717/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43419/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43419/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12190/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12190/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23956/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23956/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1145/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1145/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12103/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12103/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24850/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24850/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25710/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25710/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24426/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24426/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32846/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32846/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22012/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
